Views Omnibox: Fixed text being selected even after blur event.

This regressed in r473830 (blurring the Omnibox then mouse-overing
resulted in an arrow cursor, not an I-beam). Now it properly deselects,
so the cursor shows as an I-beam again.

Bug: 740008
Change-Id: Ice2b4fdb21acf642bdf928c07c40beec5639274f